test 测试oss存储引擎的上传单文件、文件分片与合并功能。解决了redis在object进行序列化与反序列化的问题。